# memo_ai

./: .env.example  .gitignore  AGENTS.md  README.md  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  tsconfig.json  vercel.json
api/: AGENTS.md  ai.py  config.py  endpoints.py  index.py  llm_client.py  logger.py  model_discovery.py  models.py  notion.py  rate_limiter.py  schemas.py  services.py
docs/: AGENTS.md
public/: AGENTS.md  index.html  script.js  style.css
public/js/: AGENTS.md  chat.js  debug.js  images.js  main.js  model.js  prompt.js  types.d.ts
tests/: AGENTS.md  conftest.py  debug_gemini_image_response.py  inspect_images.py  test_advanced_scenarios.py  test_ai_internal.py  test_api_contract.py  test_critical_paths.py  test_current_api.py  test_enhanced.py  test_gap_coverage.py  test_html_js_consistency.py  test_image_gen_fix.py  test_image_generation.py  test_js_payload_safety.py  test_json_mode_integration.py  test_llm_client.py  test_model_discovery.py  test_rate_limiter.py  test_regression_schemas.py  test_response_shape.py  test_services.py  verify_e2e_image_gen.py
tests/manual/: check_notion_version_compatibility.py
